Rename vendor -> common
Change-Id: I56d53660e9a0c4e344b1bf393f2ea0e3a618bed4

--- a/example.html
+++ b/example.html
@@ -7,5 +7,5 @@
   </head>
   <body>
     <div id="example"></div>
-  <script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="instructure-ui.js"></script><script type="text/javascript" src="example.js"></script></body>
+  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="instructure-ui.js"></script><script type="text/javascript" src="example.js"></script></body>
 </html>
