--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Instructure UI Component Library (0.17.3)</title>
+    <title>Instructure UI Component Library (0.18.0)</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="common.js"></script>
-  <script type="text/javascript" src="docs.js"></script>
-  </body>
+  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="docs.js"></script></body>
 </html>
