--- a/example.html
+++ b/example.html
@@ -1,11 +1,27 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <title>Component Example</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Component Example</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet" type="text/css">
+
+    <style type="text/css">
+      body {
+        font-family: "Lato", Helvetica, Arial, sans-serif;
+        background-color: #fff;
+      }
+    </style>
+
+    <meta name="description" content="Component Example">
   </head>
+
   <body>
-    <div id="example"></div>
-  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="instructure-ui.js"></script><script type="text/javascript" src="example.js"></script></body>
+    <div id="example">
+      Loading...
+    </div>
+  <script src="polyfills.js" type="text/javascript" defer></script><script src="vendor.js" type="text/javascript" defer></script><script src="instructure-ui.js" type="text/javascript" defer></script><script src="example.js" type="text/javascript" defer></script><script src="globals.js" type="text/javascript" defer></script></body>
 </html>
