--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <title>Instructure UI Component Library (0.18.0)</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>instructure-ui : A UI component library made by Instructure Inc. (0.18.1)</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet" type="text/css">
+
+    <style type="text/css">
+      body {
+        font-family: "Lato", Helvetica, Arial, sans-serif;
+        background-color: #fff;
+      }
+    </style>
+
+    <meta name="description" content="instructure-ui : A UI component library made by Instructure Inc. (0.18.1)">
   </head>
+
   <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="docs.js"></script></body>
+    <div id="app">
+      Loading...
+    </div>
+  <script src="polyfills.js" type="text/javascript" defer></script><script src="vendor.js" type="text/javascript" defer></script><script src="docs.js" type="text/javascript" defer></script></body>
 </html>
