--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@
     <div id="app">
       Loading...
     </div>
-  <script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="instructure-ui.js"></script><script type="text/javascript" src="docs.js"></script></body>
+  <script src="vendor.js" type="text/javascript"></script><script src="instructure-ui.js" type="text/javascript" defer></script><script src="docs.js" type="text/javascript" defer></script></body>
 </html>
