--- a/index.html
+++ b/index.html
@@ -51,5 +51,5 @@
     <div id='flash-messages' role='alert'></div>
     <div id="app">Loading...</div>
     <div id="nav"></div>
-  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="instructure-ui.js"></script><script type="text/javascript" src="ui-docs.js" defer></script><script type="text/javascript" src="globals.js"></script></body>
+  <script type="text/javascript" src="common.js"></script><script type="text/javascript" src="globals.js"></script><script type="text/javascript" src="ui-docs.js" defer></script></body>
 </html>
